@@ -145,7 +145,6 @@ $(DEPENDS): Mercury.modules
 # This directory contains source files for which the module
 # name doesn't match the file name, so smart recompilation
 # won't work without the Mercury.modules file.
-.PHONY: Mercury.modules
 Mercury.modules: MDBCOMP_FLAGS
 	$(MC) $(ALL_GRADEFLAGS) $(ALL_MCFLAGS) -f *.m
 
